--- a/week2/index.html
+++ b/week2/index.html
@@ -10,7 +10,7 @@
     <title>WDD | Week 2</title>
     <link
       rel="shortcut icon"
-      href="https://antonio-saucedo.github.io/wdd-330/favicon.ico"
+      href="#"
     />
     <link rel="stylesheet" href="../css/small.css" />
     <link rel="stylesheet" href="../css/medium.css" />
