--- a/week1/story_editor.html
+++ b/week1/story_editor.html
@@ -8,7 +8,7 @@
       content="This is a story writing tool to help write, save and edit stories with."
     />
     <title>Story Writer</title>
-    <link rel="shortcut icon" href="https://antonio-saucedo.github.io/wdd-330/favicon.ico" />
+    <link rel="shortcut icon" href="#" />
     <script>
         function loadStory() {
             var storyName = document.getElementById("name_input").value
