--- a/week1/index.html
+++ b/week1/index.html
@@ -8,7 +8,7 @@
       content="Here are a few notes to show how I created the week one portfolio."
     />
     <title>WDD 330 | Week 1</title>
-    <link rel="shortcut icon" href="https://antonio-saucedo.github.io/wdd-330/favicon.ico" />
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="../css/small.css" />
     <link rel="stylesheet" href="../css/medium.css" />
     <link rel="stylesheet" href="../css/large.css" />
