--- a/week3/index.html
+++ b/week3/index.html
@@ -8,22 +8,14 @@
       content="Here are a few notes to show what I accomplished for WDD 330 week three."
     >
     <title>WDD 330 Portfolio • Week 3</title>
-    <link
-      rel="shortcut icon"
-      href="https://antonio-saucedo.github.io/wdd-330/favicon.ico"
-    >
     <link rel="stylesheet" href="../css/small.css" >
     <link rel="stylesheet" href="../css/medium.css" >
     <link rel="stylesheet" href="../css/large.css" >
     <script src="js/main.js" defer></script>
-    <script src="js/team-activity.js" defer></script>
   </head>
   <body class="long-notes">
     <header>
       <h1>Portfolio • Week 3</h1>
-      <picture>
-        <img src="../images/pen&paper.jpg" alt="Pen & Paper" >
-      </picture>
     </header>
     <main>
       <h2>Questions</h2>
@@ -66,11 +58,11 @@
         <li><a href="game6.html">Quiz Ninja Project 6</a></li>
         <li><a href="game7.html">Quiz Ninja Project 7</a></li>
         <li><a href="events.html">Events Examples</a></li>
-        <li id="team">Team Activity</li>
+        <li><a href="team-activity.html">Team Activity</a></li>
       </ol>
     </main>
     <footer>
-      <h3>&copy; 2022 | Antonio Saucedo | WDD 330</h3>
+      <h3>&copy; 2022 | Emmanuel O Gyasi-Ampomah | WDD 330</h3>
     </footer>
   </body>
 </html>
