--- a/week4/index.html
+++ b/week4/index.html
@@ -8,10 +8,6 @@
       content="Here are a few notes to show what I accomplished for WDD 330 week four."
     >
     <title>WDD 330 Portfolio | Week 4</title>
-    <link
-      rel="shortcut icon"
-      href="https://antonio-saucedo.github.io/wdd-330/favicon.ico"
-    >
     <link rel="stylesheet" href="../css/small.css" >
     <link rel="stylesheet" href="../css/medium.css" >
     <link rel="stylesheet" href="../css/large.css" >
@@ -19,7 +15,7 @@
   </head>
   <body class="long-notes">
     <header>
-      <h1>Portfolio • Week 4</h1>
+      <h1>Portfolio | Week 4</h1>
     </header>
     <main>
       <h2>Questions</h2>
@@ -72,7 +68,7 @@
       </ol>
     </main>
     <footer>
-      <h3>&copy; 2022 | Antonio Saucedo | WDD 330</h3>
+      <h3>&copy; 2022 | Emmanuel O Gyasi-Ampomah | WDD 330</h3>
     </footer>
   </body>
 </html>
