--- a/week6/index.html
+++ b/week6/index.html
@@ -8,13 +8,11 @@
     <meta name="author" content="Joseph Wilcken">
     <meta name="description" content="Reading notes and Assignments completed during Week 4 of the semester.">
     <title>Week 6: Midterm Project</title>
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/small.css">
-    <link rel="stylesheet" href="../css/medium.css">
+    <link rel="stylesheet" href="../css/small.css" >
+    <link rel="stylesheet" href="../css/medium.css" >
+    <link rel="stylesheet" href="../css/large.css">
     <link rel="stylesheet" href="toDo.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#395b50">
     <meta name="msapplication-TileColor" content="#00aba9">
