--- a/week10/index.html
+++ b/week10/index.html
@@ -7,21 +7,14 @@
       name="description"
       content="Here are a few notes to show what I accomplished for WDD 330 week ten."
     >
-    <title>WDD 330 Portfolio • Week 10</title>
-    <link
-      rel="shortcut icon"
-      href="https://antonio-saucedo.github.io/wdd-330/favicon.ico"
-    >
+    <title>WDD 330 Portfolio | Week 10</title>
     <link rel="stylesheet" href="../css/small.css" >
     <link rel="stylesheet" href="../css/medium.css" >
     <link rel="stylesheet" href="../css/large.css" >
   </head>
   <body class="long-notes">
     <header>
-      <h1>Portfolio • Week 10</h1>
-      <picture>
-        <img src="../images/pen&paper.jpg" alt="Pen & Paper" >
-      </picture>
+      <h1>Portfolio | Week 10</h1>
     </header>
     <main>
       <h2>Questions</h2>
