--- a/project/chars.html
+++ b/project/chars.html
@@ -18,7 +18,7 @@
     </ul>
     <div id="pages" class="pagination">
       <button id="first">
-        <<</button> <button id="previous">Previous
+        </button> <button id="previous">Previous
       </button>
       <button id="next">Next</button>
       <button id="last">>></button>
